--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
  <div class="pedrinho">
 
-    <img src="img/lindo.png" alt="jump"  id="jesus">
+    <img src="image/lindo.png" alt="jump"  id="jesus">
 
 
     <li> <a href="index.html">inicio</a> </li>
@@ -27,7 +27,7 @@
 
  </div>
 
-    <div id="jump">
+    <div id="jump"></div>
     <div id="jump1"></div>
     <div id="jump2"></div> 
 
@@ -37,7 +37,7 @@
 <h2 class="h2" ><strong>As principais marcas utilizadas de carro:</strong></h2>
 
 <h3></h3>
-<img src="img/carros.jpg" alt="santos" id="carros">
+<img src="image/carros.jpg" alt="santos" id="carros">
 
 <p class="paragrafo">A indústria automotiva desempenha um papel crucial na economia global, produzindo veículos que movem eficientemente pessoas e mercadorias dentro de países e por toda uma região. Essas empresas fabricam carros, caminhões, vans e veículos utilitários esportivos (SUVs), com algumas se aventurando na produção de motocicletas, veículos todo-terreno e veículos comerciais, como caminhões de transporte e ônibus.
 <br>
@@ -46,7 +46,8 @@
  
  <h3 class="h3">• Toyota Motor Corp. </h3>
  <br><br>
- <img src="img/toyota.jpg" alt="" id="toyota">
+ <img src="image/toyota.jpg" alt="" id="toyota">
+    
 
  <ul class="lista">Receita: $270,58 bilhões</ul>
  <ul class="lista"> Lucro líquido: $28,15 bilhões </ul>
@@ -61,26 +62,28 @@
   
 
    <h3 class="h3">• Grupo Volkswagen</h3>
+   <div id="imagem">
+   <img src="image/volkswagen.png" alt="sla" id="volkswagen">
+   </div>
 
-   <img src="img/volkswagen.jpg" alt="sla" id="volkswagen">
-
-   <ul class="lista">Receita: $295,73 bilhões</ul>
-   <ul class="lista">Lucro: $17,54 bilhões</ul>
-   <ul class="lista">Ativos: $638,26 bilhões</ul>
-   <ul class="lista">Valor de mercado: $82,4 bilhões</ul>
+   <ul class="lista">• Receita: $295,73 bilhões</ul>
+   <ul class="lista">• Lucro: $17,54 bilhões</ul>
+   <ul class="lista">• Ativos: $638,26 bilhões</ul>
+   <ul class="lista">• Valor de mercado: $82,4 bilhões</ul>
 
 <p class="paragrafo">A Volkswagen é uma empresa multinacional alemã de manufatura automotiva que desenvolve e produz carros de passageiros, caminhões e veículos comerciais leves, como ônibus. Modelos de veículos incluem Tiguan, Golf, Jetta, Passat e outros. A empresa interrompeu a produção do popular compacto Volkswagen Beetle no ano passado devido à queda na demanda por carros menores. As marcas de luxo mais conhecidas da Volkswagen são Porsche e Audi. A empresa também fabrica peças e oferece serviços de financiamento ao cliente e gerenciamento de frotas.</p>
 <br><br>
 
 
 <h3 class="h3">• Mercedes Benz </h3>
+<div id="imagem">
+    <img src="image/mercedes.webp" alt="é" id="mercedes"></div>
 
-<img src="img/mercedez.jpg" alt="é" id="merccedez">
 
-<ul class="lista">Receita: $178,94 bilhões</ul>
-<ul class="lista">Lucro: $27,19 bilhões</ul>
-<ul class="lista">Ativos: $295,48 bilhões</ul>
-<ul class="lista">Valor de mercado: $74,62 bilhões </ul>
+<ul class="lista">• Receita: $178,94 bilhões</ul>
+<ul class="lista">• Lucro: $27,19 bilhões</ul>
+<ul class="lista">• Ativos: $295,48 bilhões</ul>
+<ul class="lista">• Valor de mercado: $74,62 bilhões </ul>
 
 <p class="paragrafo">A Mercedes-Benz, renomada montadora alemã, personifica a excelência automotiva com uma herança que remonta a 1926. Reconhecida por sua fusão incomparável de elegância e desempenho, a marca oferece uma gama de carros de passageiros que encapsulam a sofisticação alemã. Além disso, a Mercedes-Benz destaca-se por suas inovações tecnológicas de ponta, incorporando sistemas avançados de assistência ao motorista e proporcionando uma experiência de condução única. Não apenas líder no luxo automotivo, a Mercedes-Benz também abrange veículos comerciais, como vans, veículos todo-terreno e caminhões, solidificando sua posição como uma das principais influências no cenário global da indústria automotiva.</p>
 
@@ -88,15 +91,15 @@
 
 <h3 class="h3">• Ford Motor Co.</h3>
 
+<div id="imagem"><img src="image/ford.jpg" alt="slaa" id="ford"></div>
 
-<img src="img/ford.jpg" alt="slaa" id="ford">
 
-<ul class="lista">Ativos: $257,04 bilhões</ul>
-<ul class="lista">Valor de mercado: $60,8 bilhões</ul>
-<ul class="lista">Receita: $136,34 bilhões</ul>
-<ul class="lista">Lucro: $17,94 bilhões</ul>
-<ul class="lista">Ativos: $295,48 bilhões</ul>
- <ul class="lista">$74,62 bilhões </ul>
+<ul class="lista">• Ativos: $257,04 bilhões</ul>
+<ul class="lista">• Valor de mercado: $60,8 bilhões</ul>
+<ul class="lista">• Receita: $136,34 bilhões</ul>
+<ul class="lista">• Lucro: $17,94 bilhões</ul>
+<ul class="lista">• Ativos: $295,48 bilhões</ul>
+ <ul class="lista">• $74,62 bilhões </ul>
 
  <p class="paragrafo">A Ford, gigante multinacional com sede em Michigan, é uma força motriz na indústria automotiva global. Com uma rica história que remonta ao início do século XX, a empresa não apenas desenvolve e fabrica uma ampla variedade de veículos, incluindo carros, SUVs, vans e caminhões, mas também é reconhecida por seus modelos emblemáticos que capturam a imaginação dos consumidores. Entre eles estão ícones como o Mustang, símbolo de potência e elegância, o versátil SUV Edge, o prático e eficiente Escape, o lendário F-150 e a robusta Ranger. Além de sua excelência na engenharia automotiva, a Ford também se destaca ao oferecer soluções financeiras abrangentes, incluindo financiamento e leasing, ampliando sua presença para além da fabricação de veículos e solidificando sua posição como uma das líderes no setor automotivo mundial.</p>
 
@@ -105,9 +108,9 @@
 
 
 <h3 class="h3">• Grupo BMW </h3>
-
-<img src="img/bmw.jpg" alt="sllaaaaaaaaaaaaa"  id="bmw">
-
+<div id="imagem">
+<img src="image/bmw.jpg" alt="sllaaaaaaaaaaaaa"  id="bmw">
+</div>
 <ul class="lista">Receita: $131,48 bilhões</ul>
 <ul class="lista">Lucro: $14,64 bilhões</ul>
 <ul class="lista">Ativos: $277,28 bilhões</ul>
