--- a/pag3.html
+++ b/pag3.html
@@ -14,7 +14,7 @@
 
  <div class="pedrinho">
 
-    <img src="img/lindo.png" alt="jump"  id="jesus">
+    <img src="image/lindo.png" alt="jump"  id="jesus">
 
 
     <li> <a href="index.html">inicio</a> </li>
@@ -48,7 +48,7 @@
 <h3 class="h33"><center>Ryan</center></h3>
 
 
-<img src="img/lindoss.png" alt="" class=peito">
+<img src="img/lindoss.png" alt="" class="peito">
 
 <p class="paragrafo">alguns dos meus hobbies que eu gosto de praticar são bastantes variados como jogar basquete, tocar violão, tocar trombone, gosto também de jogar futebol, gosto de viajar,entre varios gostos que eu tenho esses quais citei foi os meus favoritos.  </p>
 
