--- a/pag2.html
+++ b/pag2.html
@@ -14,7 +14,7 @@
 
  <div class="pedrinho">
 
-    <img src="img/lindo.png" alt="jump"  id="jesus">
+    <img src="image/lindo.png" alt="jump"  id="jesus">
 
 
     <li> <a href="index.html">inicio</a> </li>
